--- a/MVVMRecipeApp/build.gradle
+++ b/MVVMRecipeApp/build.gradle
@@ -1,12 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        compose_version = '1.0.0-beta04'
+        kotlin_version = '1.4.32'
+        nav_version = '2.3.5'
+        retrofit_version = '2.9.0'
+        hilt_version = '2.31.2-alpha'
+        hilt_lifecycle_viewmodel_version = "1.0.0-alpha03"
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha15"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
