--- a/MVVMRecipeApp/app/build.gradle
+++ b/MVVMRecipeApp/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
 
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
