--- a/MVVMRecipeApp/build.gradle
+++ b/MVVMRecipeApp/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         retrofit_version = '2.9.0'
         hilt_version = '2.31.2-alpha'
         hilt_lifecycle_viewmodel_version = "1.0.0-alpha03"
+        glide_version = '4.12.0'
     }
     repositories {
         google()
